--- a/S/SanJuan/SanJuan.html
+++ b/S/SanJuan/SanJuan.html
@@ -12,18 +12,29 @@
   <h2>Lugares turísticos en San Juan</h2>
 </div>
   <div class="Lugares">
-    <h2></h2>
+    <h2>El Morro</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Un hito representativo del legado colonial de Puerto Rico, el Castillo San Felipe del Morro, o El Morro para abreviar, es una ciudadela 
+      impresionante que se encuentra en la parte superior del Viejo San Juan. Su construcción se inició en 1539 y concluyó hacia 1790; durante esos 
+      250 años, el castillo se convirtió en una fortaleza de seis niveles diseñada para proteger la isla de los atacantes que se acercaban por mar. 
+      El baluarte -integrado por barracones, mazmorras y almacenes- aún conserva algunos de los cañones originales frente al océano. Esta fortaleza 
+      ha sido testigo de muchas batallas a lo largo de los siglos, desde el ataque de Sir Francis Drake en 1595 hasta el bombardeo de San Juan en 1898 
+      por parte de la Marina de los EE. UU., pero nunca ha sido derrotada. En 1898, como resultado de la Guerra Hispanoamericana, la isla pasó de manos 
+      españolas a los Estados Unidos. El castillo alberga el faro más antiguo de la isla, construido bajo el dominio español en 1846. Más tarde, 
+      El Morro fue designado como parte de Fort Brooke y se utilizó activamente como instalación militar durante la Primera y la Segunda Guerra Mundial.
+      En 1961, el Ejército de los EE. UU. retiró El Morro y lo pasó al Servicio de Parques Nacionales para establecer un museo.
     </p>
     <p>
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Museo Casa Blanca</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Construido originalmente en 1521 como la residencia principal del primer gobernador de Puerto Rico, Juan Ponce de León, este hito es la
+      residencia más antigua del Viejo San Juan. Hoy en día, la residencia sirve como museo que alberga artefactos de los siglos XVI y XVII.
     </p>
     Pueden visitar en:
     <p>
@@ -31,9 +42,12 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Museo de Arte Contemporáneo de Puerto Rico</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Fundado en 1984 en Santurce, el Museo de Arte Contemporáneo de Puerto Rico (MAC) nació de la voluntad de los artistas puertorriqueños 
+      y otros miembros de la comunidad cultural y en reconocimiento a la urgencia de crear un modelo alternativo para exhibir y promover el arte
+      contemporáneo. El arte y sus problemas.
     </p>
     <p>
       Pueden visitar en:
@@ -41,9 +55,12 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Playa Último Trolley (Playa Ocean Park)</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Último Trolley es uno de los puntos de entrada más populares a Ocean Park Beach, que se extiende a lo largo de la costa de Condado. 
+      Las olas medianas hacen de esta playa un lugar vibrante para surfistas y aficionados por igual. Esta playa cuenta con aguas cristalinas y 
+      arena inmaculada para el disfrute de toda la familia.
     </p>
     <p>
       Pueden visitar en:
