--- a/S/SanJuan/SanJuan.html
+++ b/S/SanJuan/SanJuan.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>El Morro</h2>
-    <img src="" width="80%" height="30%">
+    <img src="600df07d41168.image.jpeg" width="80%" height="30%">
     <p class="text">
       Un hito representativo del legado colonial de Puerto Rico, el Castillo San Felipe del Morro, o El Morro para abreviar, es una ciudadela 
       impresionante que se encuentra en la parte superior del Viejo San Juan. Su construcción se inició en 1539 y concluyó hacia 1790; durante esos 
