--- a/S/SanJuan/SanJuan.html
+++ b/S/SanJuan/SanJuan.html
@@ -31,7 +31,7 @@
       </ul>
     </p>
     <h2>Museo Casa Blanca</h2>
-    <img src="" width="80%" height="30%">
+    <img src="DSC_0029.jpeg" width="80%" height="30%">
     <p class="text">
       Construido originalmente en 1521 como la residencia principal del primer gobernador de Puerto Rico, Juan Ponce de León, este hito es la
       residencia más antigua del Viejo San Juan. Hoy en día, la residencia sirve como museo que alberga artefactos de los siglos XVI y XVII.
