--- a/S/SanJuan/SanJuan.html
+++ b/S/SanJuan/SanJuan.html
@@ -56,7 +56,7 @@
       </ul>
     </p>
     <h2>Playa Último Trolley (Playa Ocean Park)</h2>
-    <img src="" width="80%" height="30%">
+    <img src="Ocean-Park-Beach-fb54bbde5056a36_fb54be2a-5056-a36a-0876cbd7f4cb882b.jpeg" width="80%" height="30%">
     <p class="text">
       Último Trolley es uno de los puntos de entrada más populares a Ocean Park Beach, que se extiende a lo largo de la costa de Condado. 
       Las olas medianas hacen de esta playa un lugar vibrante para surfistas y aficionados por igual. Esta playa cuenta con aguas cristalinas y 
