--- a/S/SanJuan/SanJuan.html
+++ b/S/SanJuan/SanJuan.html
@@ -43,7 +43,7 @@
       </ul>
     </p>
     <h2>Museo de Arte Contemporáneo de Puerto Rico</h2>
-    <img src="" width="80%" height="30%">
+    <img src="dscn0237_copy.jpeg" width="80%" height="30%">
     <p class="text">
       Fundado en 1984 en Santurce, el Museo de Arte Contemporáneo de Puerto Rico (MAC) nació de la voluntad de los artistas puertorriqueños 
       y otros miembros de la comunidad cultural y en reconocimiento a la urgencia de crear un modelo alternativo para exhibir y promover el arte
