--- a/S/SanJuan/SanJuan.html
+++ b/S/SanJuan/SanJuan.html
@@ -26,6 +26,7 @@
       En 1961, el Ejército de los EE. UU. retiró El Morro y lo pasó al Servicio de Parques Nacionales para establecer un museo.
     </p>
     <p>
+      Pueden visitar El Morro en:
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
@@ -36,7 +37,7 @@
       Construido originalmente en 1521 como la residencia principal del primer gobernador de Puerto Rico, Juan Ponce de León, este hito es la
       residencia más antigua del Viejo San Juan. Hoy en día, la residencia sirve como museo que alberga artefactos de los siglos XVI y XVII.
     </p>
-    Pueden visitar en:
+    Pueden visitar el Museo Casa Blanca en:
     <p>
       <ul>
         <li>Dirección: <a href=""></a></li>
@@ -50,7 +51,7 @@
       contemporáneo. El arte y sus problemas.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar el Museo de Arte Contemporáneo de Puerto Rico en:
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
@@ -63,7 +64,7 @@
       arena inmaculada para el disfrute de toda la familia.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar la Playa Último Trolley (Playa Ocean Park) en:
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
