--- a/S/SanJuan/SanJuan.html
+++ b/S/SanJuan/SanJuan.html
@@ -28,7 +28,7 @@
     <p>
       Pueden visitar El Morro en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/zb4bt1uT6CnVvVMn8">501 C. Norzagaray, San Juan, 00901</a></li>
       </ul>
     </p>
     <h2>Museo Casa Blanca</h2>
@@ -40,7 +40,7 @@
     Pueden visitar el Museo Casa Blanca en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/g5iRfrdBiX9wrbAs9">1 C. de San Sebastián, San Juan, 00926</a></li>
       </ul>
     </p>
     <h2>Museo de Arte Contemporáneo de Puerto Rico</h2>
@@ -53,7 +53,7 @@
     <p>
       Pueden visitar el Museo de Arte Contemporáneo de Puerto Rico en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://g.page/MuseoMACPR?share">Av. Juan Ponce de León, esquina Ave. Roberto H. Todd, Parada 18, San Juan, 00910</a></li>
       </ul>
     </p>
     <h2>Playa Último Trolley (Playa Ocean Park)</h2>
@@ -66,26 +66,37 @@
     <p>
       Pueden visitar la Playa Último Trolley (Playa Ocean Park) en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/F1UMUJT9hsvpjAVr9">San Juan</a></li>
       </ul>
     </p>
   </div>
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Princesa - Cocina Cultura (787)-723-7878</li>
+    <li>Cocina Abierta (787)-946-1333</li>
+    <li>Stuffed Avocado Shop (787)-303-1111</li>
+    <li>Marmalade (787)-724-3969</li>
+    <li>Casita Miramar (787)-200-8227</li>
   </ul>
   </div>
   <h2>Eventos</h2>
   <div class="Eventos">
      <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Concurso Nacional del Cuatro - Diciembre</li>
+    <li>Concurso Nacional de Trovadores - mayo</li>
+    <li>Día de los Reyes - enero</li>
+    <li>Festival Cultural del Niño - Septiembre</li>
+    <li>Festival de Verano - junio</li>
+    <li>Festival de la Calle de San Sebastián - Enero</li>
+    <li>Festival de Teatro Musical - enero</li>
+    <li>Festival de Verano - junio</li>
+    <li>Festival Folklórico Internacional - Enero</li>
+    <li>Festival La Casita - Todo el año</li>
+    <li>Noches de Galería - Todo el año</li>
+    <li>Día de San Juan Bautista - Junio</li>
+    <li>San Juan Cinemafest - Octubre</li>
+    <li>Festival Culinario Sofo - Agosto/Diciembre</li>
   </ul>
   </div>
 </body>
