--- a/S/SanLorenzo/SanLorenzo.html
+++ b/S/SanLorenzo/SanLorenzo.html
@@ -12,18 +12,24 @@
   <h2>Lugares turísticos en San Lorenzo</h2>
 </div>
   <div class="Lugares">
-    <h2></h2>
+    <h2>Los 7 Chorros</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Llamado Siete Chorros por las siete pequeñas cascadas que se unen para formar una piscina natural, este lugar es imprescindible cuando
+      se está en San Lorenzo.
     </p>
     <p>
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Río la Playita El 9</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+        “Playita del Nueve” es un río que adquiere nombre de playa por lo blanca y suave que es su arena. 
+      Este lugar cuenta con gazebos, quioscos y fogones. Aunque es un recurso natural pedregoso esta habilitado con tablados en la entrada y
+      ruta al río, con rampas para personas con impedimentos, cumpliendo así con los requerimientos del Departamento de Recursos Naturales de la Región.
+      Ya sea para pasar el día en familia, para darte un rico chapuzón o simplemente para meditar, puedes darte la vueltita.
     </p>
     Pueden visitar en:
     <p>
@@ -31,9 +37,12 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Teatro Priscila Flores</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Construido a principios del siglo XX, el Teatro Priscila Flores fue considerado el centro social del pueblo de San Lorenzo. 
+      Reconstruido dos veces, primero después del huracán San Felipe en 1928 y luego después de un incendio en la década de 1940, el teatro funcionó 
+      hasta 1984. En 1986, el municipio compró el teatro para preservarlo. Hoy en día, el teatro se puede alquilar para funciones/eventos privados.
     </p>
     <p>
       Pueden visitar en:
@@ -41,9 +50,13 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Parque Acuático Piedra Dura</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      El Parque Acuático Piedra Dura está localizado en San Lorenzo. Es un parque que cuenta con atracciones para niños, jóvenes y adultos.
+      Entre sus facilidades encontrarás: un zip line que cruza todo el parque, un área de chorritos para los chiquitos, barcos eléctricos que disparan 
+      agua, una roca de 24 pies para escalar y una piscina de 4 pies profundidad con capacidad para 200 personas, esta cuenta con una chorrera para
+      niños
     </p>
     <p>
       Pueden visitar en:
