--- a/S/SanLorenzo/SanLorenzo.html
+++ b/S/SanLorenzo/SanLorenzo.html
@@ -38,7 +38,7 @@
       </ul>
     </p>
     <h2>Teatro Priscila Flores</h2>
-    <img src="" width="80%" height="30%">
+    <img src="067d137cc2ffe3ec1c79e5bb6ff9a106--teatro-municipal-puerto-rico.jpeg" width="80%" height="30%">
     <p class="text">
       Construido a principios del siglo XX, el Teatro Priscila Flores fue considerado el centro social del pueblo de San Lorenzo. 
       Reconstruido dos veces, primero después del huracán San Felipe en 1928 y luego después de un incendio en la década de 1940, el teatro funcionó 
