--- a/S/SanLorenzo/SanLorenzo.html
+++ b/S/SanLorenzo/SanLorenzo.html
@@ -24,7 +24,7 @@
       </ul>
     </p>
     <h2>Río la Playita El 9</h2>
-    <img src="" width="80%" height="30%">
+    <img src="9eea6de3b4a2737c43a25fed6fd00f01.jpeg" width="80%" height="30%">
     <p class="text">
         “Playita del Nueve” es un río que adquiere nombre de playa por lo blanca y suave que es su arena. 
       Este lugar cuenta con gazebos, quioscos y fogones. Aunque es un recurso natural pedregoso esta habilitado con tablados en la entrada y
