--- a/S/SanLorenzo/SanLorenzo.html
+++ b/S/SanLorenzo/SanLorenzo.html
@@ -51,7 +51,7 @@
       </ul>
     </p>
     <h2>Parque Acuático Piedra Dura</h2>
-    <img src="" width="80%" height="30%">
+    <img src="Parque_Acuatico_Piedra_Dura_San_Lorenzo_Puerto_Rico4_0.jpeg" width="80%" height="30%">
     <p class="text">
       El Parque Acuático Piedra Dura está localizado en San Lorenzo. Es un parque que cuenta con atracciones para niños, jóvenes y adultos.
       Entre sus facilidades encontrarás: un zip line que cruza todo el parque, un área de chorritos para los chiquitos, barcos eléctricos que disparan 
