--- a/S/SanLorenzo/SanLorenzo.html
+++ b/S/SanLorenzo/SanLorenzo.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>Los 7 Chorros</h2>
-    <img src="" width="80%" height="30%">
+    <img src="siete-chorros-1.jpeg" width="80%" height="30%">
     <p class="text">
       Llamado Siete Chorros por las siete pequeñas cascadas que se unen para formar una piscina natural, este lugar es imprescindible cuando
       se está en San Lorenzo.
