--- a/S/SanLorenzo/SanLorenzo.html
+++ b/S/SanLorenzo/SanLorenzo.html
@@ -19,11 +19,12 @@
       se está en San Lorenzo.
     </p>
     <p>
+      Pueden visitar Los 7 Chorros en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://g.page/RioSieteChorros?share">4X8H+PJX, PR-745, San Lorenzo, 00754</a></li>
       </ul>
     </p>
-    <h2>Río la Playita El 9</h2>
+    <h2>Río la Playita del 9</h2>
     <img src="9eea6de3b4a2737c43a25fed6fd00f01.jpeg" width="80%" height="30%">
     <p class="text">
         “Playita del Nueve” es un río que adquiere nombre de playa por lo blanca y suave que es su arena. 
@@ -31,10 +32,10 @@
       ruta al río, con rampas para personas con impedimentos, cumpliendo así con los requerimientos del Departamento de Recursos Naturales de la Región.
       Ya sea para pasar el día en familia, para darte un rico chapuzón o simplemente para meditar, puedes darte la vueltita.
     </p>
-    Pueden visitar en:
+    Pueden visitar el Río la Playita del 9 en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/fFCGNGXdqDaiZ1NQ8">42VC+JWR, PR-9912, San Lorenzo, 00754</a></li>
       </ul>
     </p>
     <h2>Teatro Priscila Flores</h2>
@@ -45,9 +46,9 @@
       hasta 1984. En 1986, el municipio compró el teatro para preservarlo. Hoy en día, el teatro se puede alquilar para funciones/eventos privados.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar el Teatro Priscila Flores en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/RfW8bGdq5JoGpGoG7">52RQ+CMC, Cll Varona Suarez, San Lorenzo, 00754</a></li>
       </ul>
     </p>
     <h2>Parque Acuático Piedra Dura</h2>
@@ -59,28 +60,31 @@
       niños
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar el Parque Acuático Piedra Dura en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/mVM9mv8qxBhfobPe6">PR-181, San Lorenzo, 00754</a></li>
       </ul>
     </p>
   </div>
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Valo's (787)-736-7406</li>
+    <li>El Vagón Station - San Lorenzo (787)-991-5060</li>
+    <li>El Rey de las Frituras (787)-715-3140</li>
+    <li>Fran Cheese Pizza (787)-715-2340</li>
+    <li>El Mexicano (787)-736-1135</li>
   </ul>
   </div>
   <h2>Eventos</h2>
   <div class="Eventos">
      <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Festival de Bordado y Tejido - Septiembre</li>
+    <li>Festival de Chiringa - Marzo</li>
+    <li>Fiestas de la Cruz - Mayo</li>
+    <li>Fiestas de la Candelaria - febrero</li>
+    <li>Fiestas Patronales Nuestra Señora de las Mercedes</li>
+    <li>Truya de Reyes - Enero</li>
   </ul>
   </div>
 </body>
