--- a/S/SanSebastian/SanSebastian.html
+++ b/S/SanSebastian/SanSebastian.html
@@ -12,7 +12,7 @@
   <h2>Lugares turísticos en San Sebastián</h2>
 </div>
   <div class="Lugares">
-    <h2></h2>
+    <h2>Museo de la Hamaca</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
     </p>
@@ -21,7 +21,7 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Cascada Gozalandia</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
     </p>
@@ -31,7 +31,7 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Casa y Museo Doña Bisa</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
     </p>
@@ -41,7 +41,7 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Salto Collazo</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
     </p>
