--- a/S/SanSebastian/SanSebastian.html
+++ b/S/SanSebastian/SanSebastian.html
@@ -15,6 +15,8 @@
     <h2>Museo de la Hamaca</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      La hamaca fue inventada por los habitantes precolombinos de Puerto Rico y el Caribe, el pueblo indígena taíno. 
+      En la localidad de San Sebastián se encuentra el Museo de la Hamaca, que recorre la historia y evolución de la hamaca.
     </p>
     <p>
       <ul>
@@ -24,6 +26,10 @@
     <h2>Cascada Gozalandia</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      La Cascada Gozalandia en San Sebastián se ha convertido en uno de los tesoros naturales más visitados en Puerto Rico, 
+      también se le conoce como Charca El Roble o el Charco de la Leche. La charca tiene unas impresionantes cascadas (ver fotos) que 
+      por su belleza natural, llegaron a ser escenario de la película “A Perfect Gateway” en el 2009; aquí puedes ver el corto de la película 
+      donde aparece Gozalandia. 
     </p>
     Pueden visitar en:
     <p>
@@ -34,6 +40,8 @@
     <h2>Casa y Museo Doña Bisa</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      El Museo Casa de Doña Bisa está ubicado en la localidad de San Sebastián. El museo se encuentra dentro de una propiedad histórica que se 
+      ha conservado y restaurado para representar la forma de vida de principios del siglo XX.
     </p>
     <p>
       Pueden visitar en:
@@ -44,6 +52,9 @@
     <h2>Salto Collazo</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      El Salto de Collazo es una hermosa cascada que se encuentra a orillas de la carr. #111 de San Sebastián a Lares, a unos 10 minutos del pueblo.
+      Cuando estés de callejeo en San Sebastián tienes que llegar y visitarla. Se puede nadar en una piscina pequeña a los pies de la cascada. 
+      Buena para un buen chapuzón y aliviar las calores de la temporada. 
     </p>
     <p>
       Pueden visitar en:
