--- a/S/SanSebastian/SanSebastian.html
+++ b/S/SanSebastian/SanSebastian.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>Museo de la Hamaca</h2>
-    <img src="" width="80%" height="30%">
+    <img src="Museo-de-la-Hamaca-2_51E6E2BC-5056-A36A-08920091D1FFCFB1-51e6e1e45056a36_51e6e34d-5056-a36a-0879ff9c1afe9d47.jpeg" width="80%" height="30%">
     <p class="text">
       La hamaca fue inventada por los habitantes precolombinos de Puerto Rico y el Caribe, el pueblo indígena taíno. 
       En la localidad de San Sebastián se encuentra el Museo de la Hamaca, que recorre la historia y evolución de la hamaca.
