--- a/S/SanSebastian/SanSebastian.html
+++ b/S/SanSebastian/SanSebastian.html
@@ -38,7 +38,7 @@
       </ul>
     </p>
     <h2>Casa y Museo Doña Bisa</h2>
-    <img src="" width="80%" height="30%">
+    <img src="San-Sebastian-Museo-de-Historia-3_52058E14-5056-A36A-0821E6C33329A754-52058d2d5056a36_52058e78-5056-a36a-080ea58b2c96027d.jpeg" width="80%" height="30%">
     <p class="text">
       El Museo Casa de Doña Bisa está ubicado en la localidad de San Sebastián. El museo se encuentra dentro de una propiedad histórica que se 
       ha conservado y restaurado para representar la forma de vida de principios del siglo XX.
