--- a/S/SanSebastian/SanSebastian.html
+++ b/S/SanSebastian/SanSebastian.html
@@ -24,7 +24,7 @@
       </ul>
     </p>
     <h2>Cascada Gozalandia</h2>
-    <img src="" width="80%" height="30%">
+    <img src="gozalandia-falls-1.jpeg" width="80%" height="30%">
     <p class="text">
       La Cascada Gozalandia en San Sebastián se ha convertido en uno de los tesoros naturales más visitados en Puerto Rico, 
       también se le conoce como Charca El Roble o el Charco de la Leche. La charca tiene unas impresionantes cascadas (ver fotos) que 
