--- a/S/SanSebastian/SanSebastian.html
+++ b/S/SanSebastian/SanSebastian.html
@@ -50,7 +50,7 @@
       </ul>
     </p>
     <h2>Salto Collazo</h2>
-    <img src="" width="80%" height="30%">
+    <img src="salto-collazo.jpeg" width="80%" height="30%">
     <p class="text">
       El Salto de Collazo es una hermosa cascada que se encuentra a orillas de la carr. #111 de San Sebastián a Lares, a unos 10 minutos del pueblo.
       Cuando estés de callejeo en San Sebastián tienes que llegar y visitarla. Se puede nadar en una piscina pequeña a los pies de la cascada. 
