--- a/S/SanSebastian/SanSebastian.html
+++ b/S/SanSebastian/SanSebastian.html
@@ -19,6 +19,7 @@
       En la localidad de San Sebastián se encuentra el Museo de la Hamaca, que recorre la historia y evolución de la hamaca.
     </p>
     <p>
+       Pueden visitar el Museo de la Hamaca en:
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
@@ -31,7 +32,7 @@
       por su belleza natural, llegaron a ser escenario de la película “A Perfect Gateway” en el 2009; aquí puedes ver el corto de la película 
       donde aparece Gozalandia. 
     </p>
-    Pueden visitar en:
+    Pueden visitar la Cascada Gozalandia en:
     <p>
       <ul>
         <li>Dirección: <a href=""></a></li>
@@ -44,7 +45,7 @@
       ha conservado y restaurado para representar la forma de vida de principios del siglo XX.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar la Casa y Museo Doña Bisa en:
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
@@ -57,7 +58,7 @@
       Buena para un buen chapuzón y aliviar las calores de la temporada. 
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar el Salto Collazo en:
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
