--- a/S/SanSebastian/SanSebastian.html
+++ b/S/SanSebastian/SanSebastian.html
@@ -21,7 +21,7 @@
     <p>
        Pueden visitar el Museo de la Hamaca en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/fEY7Edz9QKgc2MCj6">11 Cll Hostos Cabrera, San Sebastián, 00685</a></li>
       </ul>
     </p>
     <h2>Cascada Gozalandia</h2>
@@ -35,7 +35,7 @@
     Pueden visitar la Cascada Gozalandia en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/yWdUeUSbq2R6R6uu7">9268+5GG, Sec Lechuza, San Sebastián 00685</a></li>
       </ul>
     </p>
     <h2>Casa y Museo Doña Bisa</h2>
@@ -47,7 +47,7 @@
     <p>
       Pueden visitar la Casa y Museo Doña Bisa en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/VEmJGcFgdvcgW9ts6">Casa de Doña Bisa, Cll Luis Muñoz Rivera, San Sebastian, San Sebastián 00685</a></li>
       </ul>
     </p>
     <h2>Salto Collazo</h2>
@@ -60,26 +60,28 @@
     <p>
       Pueden visitar el Salto Collazo en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/6pDEwr1eZBrmUyEz6">83M2+582, Carr. Enrique Laguerre, San Sebastian, San Sebastián 00685</a></li>
       </ul>
     </p>
   </div>
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Brasas Bar & Grill (787)-280-8800</li>
+    <li>Restaurante Hacienda La Fe (787)-301-5707</li>
+    <li>Marisquería Jíbara Restaurant
+ (939)-339-9531</li>
+    <li>Pizzería y Restaurante Don Quijote (787)-896-5605</li>
+    <li>Mixto (787)-896-5178</li>
   </ul>
   </div>
   <h2>Eventos</h2>
   <div class="Eventos">
      <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Fiesta de la Novilla - Enero</li>
+    <li>Fiesta de Reyes - Enero</li>
+    <li>Festival Nacional de la Hamaca - julio</li>
+    <li>Fiestas Patronales de San Sebastián - Enero</li>
   </ul>
   </div>
 </body>
