--- a/S/SantaIsabel/SantaIsabel.html
+++ b/S/SantaIsabel/SantaIsabel.html
@@ -12,41 +12,50 @@
   <h2>Lugares turísticos en Santa Isabel</h2>
 </div>
   <div class="Lugares">
-    <h2></h2>
+    <h2>Malecón de Santa Isabel</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      El Malecón es un paseo marítimo recreativo a lo largo de la costa que está cerca de restaurantes de mariscos, bares y otros negocios locales.
+      Para una oportunidad para tomar fotos y un almuerzo relajante, este es un gran lugar para comenzar tu visita. 
     </p>
+    <p>
+      Pueden visitar el Malecón de Santa Isabel en:
+      <ul>
+        <li>Dirección: <a href=""></a></li>
+      </ul>
+    </p>
+    <h2>Las Letras de Santa Isabel</h2>
+    <img src="" width="80%" height="30%">
+    <p class="text">
+      El equipo de Manejo de Emergencias del Municipio de Santa Isabel elaboró con material reciclado las letras del nombre del pueblo sureño y las 
+      colocó en un punto frecuentado por los visitantes: la carretera PR-153 con los aerogeneradores de viento al fondo.
+    </p>
+    Pueden visitar Las Letras de Santa Isabel en:
     <p>
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Laguna de las Iguanas</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Esta hermosa laguna se accede atraves de la carretera PR-153 KM 6.0 Int Barrio Felicia 2, Sector Paso Seco en la comunidad El Ojo en Santa Isabel, 
+      municipio conocido como "El Pueblo de los Molinos", "La Tierra de Campeones" y "Ciudad de los Potros".
     </p>
-    Pueden visitar en:
     <p>
+      Pueden visitar la Laguna de las Iguanas en:
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Plaza Pública de Santa Isabel</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      El corazón del municipio de Santa Isabel <br>
+      Santa Isabel es conocida como La Ciudad de los Potros. Santa Isabel fue fundada el 5 de octubre de 1842 por Antonio Vélez.
     </p>
     <p>
-      Pueden visitar en:
-      <ul>
-        <li>Dirección: <a href=""></a></li>
-      </ul>
-    </p>
-    <h2></h2>
-    <img src="" width="80%" height="30%">
-    <p class="text">
-    </p>
-    <p>
-      Pueden visitar en:
+      Pueden visitar la Plaza Pública de Santa Isabel en:
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
