--- a/S/SantaIsabel/SantaIsabel.html
+++ b/S/SantaIsabel/SantaIsabel.html
@@ -49,7 +49,7 @@
       </ul>
     </p>
     <h2>Plaza Pública de Santa Isabel</h2>
-    <img src="" width="80%" height="30%">
+    <img src="SPAUET6BT5HUDNGVKS455JRPHQ.jpeg" width="80%" height="30%">
     <p class="text">
       El corazón del municipio de Santa Isabel <br>
       Santa Isabel es conocida como La Ciudad de los Potros. Santa Isabel fue fundada el 5 de octubre de 1842 por Antonio Vélez.
