--- a/S/SantaIsabel/SantaIsabel.html
+++ b/S/SantaIsabel/SantaIsabel.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>Malecón de Santa Isabel</h2>
-    <img src="" width="80%" height="30%">
+    <img src="maleconsantaisabel.jpeg" width="80%" height="30%">
     <p class="text">
       El Malecón es un paseo marítimo recreativo a lo largo de la costa que está cerca de restaurantes de mariscos, bares y otros negocios locales.
       Para una oportunidad para tomar fotos y un almuerzo relajante, este es un gran lugar para comenzar tu visita. 
