--- a/S/SantaIsabel/SantaIsabel.html
+++ b/S/SantaIsabel/SantaIsabel.html
@@ -25,7 +25,7 @@
       </ul>
     </p>
     <h2>Las Letras de Santa Isabel</h2>
-    <img src="" width="80%" height="30%">
+    <img src="maxresdefault.jpeg" width="80%" height="30%">
     <p class="text">
       El equipo de Manejo de Emergencias del Municipio de Santa Isabel elaboró con material reciclado las letras del nombre del pueblo sureño y las 
       colocó en un punto frecuentado por los visitantes: la carretera PR-153 con los aerogeneradores de viento al fondo.
