--- a/S/SantaIsabel/SantaIsabel.html
+++ b/S/SantaIsabel/SantaIsabel.html
@@ -21,7 +21,7 @@
     <p>
       Pueden visitar el Malecón de Santa Isabel en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/PVAQuoXZXW5qxsBT9">XH3V+GJH, PR-538, Santa Isabel, 00757</a></li>
       </ul>
     </p>
     <h2>Las Letras de Santa Isabel</h2>
@@ -33,7 +33,7 @@
     Pueden visitar Las Letras de Santa Isabel en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/aybnbqkGmtcNMjuFA">XJP3+P53, Santa Isabel 00757</a></li>
       </ul>
     </p>
     <h2>Laguna de las Iguanas</h2>
@@ -45,7 +45,7 @@
     <p>
       Pueden visitar la Laguna de las Iguanas en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/KkRKDZUe8HTEVPfC8">2J65+9P, El Ojo, Santa Isabel 00757</a></li>
       </ul>
     </p>
     <h2>Plaza Pública de Santa Isabel</h2>
@@ -57,7 +57,7 @@
     <p>
       Pueden visitar la Plaza Pública de Santa Isabel en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/mARYdzCGYa71AQMq7">48-50 C. Luis Muñoz Rivera, Santa Isabel, 00757</a></li>
       </ul>
     </p>
   </div>
@@ -74,9 +74,11 @@
   <h2>Eventos</h2>
   <div class="Eventos">
      <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Carnaval del Cemí - Octubre</li>
+    <li>Carnaval del Juey - junio</li>
+    <li>Fiesta del Mango - Mayo</li>
+    <li>Fiesta del Pavo - Noviembre</li>
+    <li>Fiestas Patronales de Santiago Apóstol - julio</li>
   </ul>
   </div>
 </body>
