--- a/S/SantaIsabel/SantaIsabel.html
+++ b/S/SantaIsabel/SantaIsabel.html
@@ -64,11 +64,11 @@
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>La Fonda de Ángelo (787)-845-2886</li>
+    <li>Saldah (787)-602-1348</li>
+    <li>Lalo's Cafe (978)-876-4090</li>
+    <li>Puerto Escondido (939)-253-6758</li>
+    <li>Kabba's Bar & Grill (787)-845-4112</li>
   </ul>
   </div>
   <h2>Eventos</h2>
