--- a/T/ToaAlta/ToaAlta.html
+++ b/T/ToaAlta/ToaAlta.html
@@ -12,18 +12,22 @@
   <h2>Lugares turísticos en Toa Alta</h2>
 </div>
   <div class="Lugares">
-    <h2></h2>
+    <h2>Refugio De Vida Silvestre Embalse La Plata</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Este embalse posee una designación como Refugio de Vida Silvestre se construyó en el 1973. 
+      Es administrado por la Autoridad de Acueductos y Alcantarillados (A.A.A) sus aguas se utilizan para la producción de agua potable y recreación.
     </p>
     <p>
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Río La Plata</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Río de la Plata es el río más largo de la isla y estado libre asociado de Puerto Rico. Se encuentra ubicado en la costa norte de la isla. 
+      Fluye de sur a norte y desemboca en el Océano Atlántico
     </p>
     Pueden visitar en:
     <p>
@@ -31,9 +35,13 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Monte Realengo MTB</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Monte Realengo. Ruta Trail y All Mountain de nivel Intermedio-avanzado. El terrero es variado entre los segmentos pero en su mayoría es 
+      terrero rocoso de alto nivel técnico, cuenta con varios DownHill que van desde avanzado hasta nivel intermedio. 
+      Es una ruta diseñada para entrenar técnica, subidas off camber con switchback. Opcionalmente, se pueden hacer multiples brincos de rampas, 
+      drop-offs, skinnies, y wall rides.
     </p>
     <p>
       Pueden visitar en:
@@ -41,9 +49,10 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Teatro Maso Rivera Toa Alta</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Teatro Maso Rivera se encuentra en Toa Alta (Puerto Rico). Teatro Maso Rivera está trabajando en actividades de Salas de conciertos y teatros.
     </p>
     <p>
       Pueden visitar en:
@@ -65,9 +74,7 @@
   <h2>Eventos</h2>
   <div class="Eventos">
      <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+       <li>Fiestas Patronales de San Fernando - Mayo</li>
   </ul>
   </div>
 </body>
