--- a/T/ToaAlta/ToaAlta.html
+++ b/T/ToaAlta/ToaAlta.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>Refugio De Vida Silvestre Embalse La Plata</h2>
-    <img src="" width="80%" height="30%">
+    <img src="La-Plata7.jpeg" width="80%" height="30%">
     <p class="text">
       Este embalse posee una designación como Refugio de Vida Silvestre se construyó en el 1973. 
       Es administrado por la Autoridad de Acueductos y Alcantarillados (A.A.A) sus aguas se utilizan para la producción de agua potable y recreación.
