--- a/T/ToaAlta/ToaAlta.html
+++ b/T/ToaAlta/ToaAlta.html
@@ -50,7 +50,7 @@
       </ul>
     </p>
     <h2>Teatro Maso Rivera Toa Alta</h2>
-    <img src="" width="80%" height="30%">
+    <img src="fefe_0.png" width="80%" height="30%">
     <p class="text">
       Teatro Maso Rivera se encuentra en Toa Alta (Puerto Rico). Teatro Maso Rivera está trabajando en actividades de Salas de conciertos y teatros.
     </p>
