--- a/T/ToaAlta/ToaAlta.html
+++ b/T/ToaAlta/ToaAlta.html
@@ -36,7 +36,7 @@
       </ul>
     </p>
     <h2>Monte Realengo MTB</h2>
-    <img src="" width="80%" height="30%">
+    <img src="p4pb16080606.jpeg" width="80%" height="30%">
     <p class="text">
       Monte Realengo. Ruta Trail y All Mountain de nivel Intermedio-avanzado. El terrero es variado entre los segmentos pero en su mayoría es 
       terrero rocoso de alto nivel técnico, cuenta con varios DownHill que van desde avanzado hasta nivel intermedio. 
