--- a/T/ToaAlta/ToaAlta.html
+++ b/T/ToaAlta/ToaAlta.html
@@ -19,20 +19,21 @@
       Es administrado por la Autoridad de Acueductos y Alcantarillados (A.A.A) sus aguas se utilizan para la producción de agua potable y recreación.
     </p>
     <p>
+     Pueden visitar Refugio De Vida Silvestre Embalse La Plata en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/UsuSNmTeuUkvwBx37">km4.9 Puerto Rico 824, Toa Alta, 00953</a></li>
       </ul>
     </p>
     <h2>Río La Plata</h2>
-    <img src="" width="80%" height="30%">
+    <img src="IMG_2512.jpg.webp" width="80%" height="30%">
     <p class="text">
       Río de la Plata es el río más largo de la isla y estado libre asociado de Puerto Rico. Se encuentra ubicado en la costa norte de la isla. 
       Fluye de sur a norte y desemboca en el Océano Atlántico
     </p>
-    Pueden visitar en:
+    Pueden visitar el Río La Plata en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/iPaJcU8n9Brf2haaA">Toa Alta 00953</a></li>
       </ul>
     </p>
     <h2>Monte Realengo MTB</h2>
@@ -44,9 +45,9 @@
       drop-offs, skinnies, y wall rides.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar Monte Realengo MTB en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/51C9Pe4pGVFh439A7">9QWG+842, Mucarabones, Toa Alta 00953</a></li>
       </ul>
     </p>
     <h2>Teatro Maso Rivera Toa Alta</h2>
@@ -55,20 +56,20 @@
       Teatro Maso Rivera se encuentra en Toa Alta (Puerto Rico). Teatro Maso Rivera está trabajando en actividades de Salas de conciertos y teatros.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar el Teatro Maso Rivera Toa Alta en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/apVarz5D3pGKGxLbA">9QQ3+C2J, C. José de Diego, Toa Alta, 00953</a></li>
       </ul>
     </p>
   </div>
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Aníbal BBQ (787)-870-5185</li>
+    <li>"Aqui Es Que Es" Pinchos Y Algo Mas (787)-624-7738</li>
+    <li>Cafeliz (787)-870-1720</li>
+    <li>El Rollo (787)-662-5458</li>
+    <li>Platanean2 (787)-944-9004</li>
   </ul>
   </div>
   <h2>Eventos</h2>
